# backend_biocherish

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  modal_upload.py  pyproject.toml  requirements.txt
app/: exceptions.py  main.py
app/core/: config.py  createTable.py  db.py
app/exceptions/: UserException.py  main.py
app/lib/: auth.py  build_firmware.py  data.py  device.py  file.py  image.py
app/middlewares/: __init__.py  response.py
app/models/: bottle.py  user.py
app/routes/: router.py
app/routes/api/: auth.py  bottle.py  device.py  login.py
